--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -20,9 +20,9 @@
         ?>
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
-        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+        <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
         <?php elseif ($showTitleOption == 'file_name'): ?>
-        <h3><?php echo $media->displayTitle(); ?></h3>
+        <h3 class="h2"><?php echo $media->displayTitle(); ?></h3>
         <?php endif; ?>
     <?php endif; ?>
 
