--- a/view/common/block-layout/item-showcase-no-image.phtml
+++ b/view/common/block-layout/item-showcase-no-image.phtml
@@ -13,9 +13,9 @@
                     <div class="separator-center">
                         <?php $showTitleOption = $this->showTitleOption; ?>
                         <?php if ($showTitleOption == 'item_title'): ?>
-                            <h3 class="margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
+                            <h3 class="h2 margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
                         <?php elseif ($showTitleOption == 'file_name'): ?>
-                            <h3 class="margin-top-1"><?php echo $media->displayTitle(); ?></h3>
+                            <h3 class="h2 margin-top-1"><?php echo $media->displayTitle(); ?></h3>
                         <?php endif; ?>
                     <?php endif; ?>
                     <?php
