--- a/view/common/block-layout/resource-text-seadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-seadragon-dark.phtml
@@ -21,14 +21,14 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
+<div class="block full-width-css grid-x grid-padding-x padding-1 large-padding-2 margin-bottom-1 background-colour-uom-footer media-text">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading">
-    <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
+    <div class="media-text-heading margin-bottom-1">
+        <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file xlarge-7 flex-container flex-dir-column align-center video-wrap">
-        <div class="attachments responsive-embed">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-7 xlarge-8">
+    <div class="attachments resource-text-openseadragon">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
@@ -36,21 +36,13 @@ $lang = $filterLocale ? $this->lang() : null;
                 $link = null;
                 $item = $attachment->item();
                 if ($item):
-               $media = $attachment->media() ? : $item->primaryMedia();
-               $mediaRenderer = $media->renderer();
-               if ($media && $mediaRenderer !== 'iiif') :
+                    $media = $attachment->media() ? : $item->primaryMedia();
+                    $mediaRenderer = $media->renderer();
+                    $mediaType = $media->mediaType();
                    echo $media->render([
                    'thumbnailType' => $thumbnailType,
                    'link' => $link,
-               ]);
-               elseif ($media && $mediaRenderer === 'youtube') :
-                    echo $media->render([
-                    'thumbnailType' => $thumbnailType,
-                    'link' => $link,
                     ]);
-               elseif ($media) :
-                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-               endif;
 
                     if ($showTitleOption == 'item_title'):
                         $title = $item->displayTitle(null, $lang);
@@ -73,42 +65,44 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>
+                <?php if ($attachment->caption()): ?>
                 <div class="caption">
-                    <?= $caption ?>
+                    <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
                 </div>
+                <?php endif; ?>
             </div>
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text xlarge-5 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
-        <div class="metadata margin-bottom-1 separator-center">
-            <?php $showTitleOption = $this->showTitleOption; ?>
-            <?php if ($showTitleOption == 'item_title'): ?>
-            <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
-            <?php elseif ($showTitleOption == 'file_name'): ?>
-            <h3 class="h2"><?php echo $item->link($media->displayTitle()); ?></h3>
-            <?php endif; ?>
-        <?php
-            $date = $item->value('dcterms:date');
-            if ($date):
-            ?>
-        <h3><small date><?php echo $date; ?></small></h3>
+    <div class="resource-text large-5 xlarge-4 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
+    <div class="metadata margin-bottom-1 separator-center">
+        <?php $showTitleOption = $this->showTitleOption; ?>
+        <?php if ($showTitleOption == 'item_title'): ?>
+        <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
+        <?php elseif ($showTitleOption == 'file_name'): ?>
+        <h3 class="h2"><?php echo $item->link($media->displayTitle()); ?></h3>
         <?php endif; ?>
         <?php
-            $origin = $item->value('curation:location');
-            if ($origin):
-            ?>
-        <h3><small origin><?php echo $origin; ?></small></h3>
-        <?php endif; ?>
-        </div>
-            <div class="text font-wide">
-                <?= $html ?>
-                <?php
-                $identifier = $item->value('dcterms:identifier');
-                if ($identifier):
-                ?>
-            <h3 class="h4 reference"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
-            <?php endif; ?>
-            </div>
-        </div>
+         $date = $item->value('dcterms:date');
+         if ($date):
+         ?>
+      <h3><small date><?php echo $date; ?></small></h3>
+      <?php endif; ?>
+      <?php
+         $origin = $item->value('curation:location');
+         if ($origin):
+         ?>
+      <h3><small origin><?php echo $origin; ?></small></h3>
+      <?php endif; ?>
+      </div>
+    <div class="text font-wide">
+        <?= $html ?>
+        <?php
+         $identifier = $item->value('dcterms:identifier');
+         if ($identifier):
+         ?>
+      <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
+      <?php endif; ?>
+    </div>
+</div>
 </div>
