--- a/view/common/block-layout/resource-text-seadragon-off-canvas.phtml
+++ b/view/common/block-layout/resource-text-seadragon-off-canvas.phtml
@@ -27,85 +27,86 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file small-12">
-    <div class="attachments resource-text-openseadragon">
-            <?php
-            foreach ($attachments as $attachment):
-                $render = null;
-                $title = null;
-                $link = null;
-                $item = $attachment->item();
-                if ($item):
-                    $media = $attachment->media() ? : $item->primaryMedia();
-                    $mediaRenderer = $media->renderer();
-                    $mediaType = $media->mediaType();
-                   echo $media->render([
-                   'thumbnailType' => $thumbnailType,
-                   'link' => $link,
-                    ]);
+    <div class="media file small-12">
+        <div class="attachments resource-text-openseadragon">
+                <?php
+                foreach ($attachments as $attachment):
+                    $render = null;
+                    $title = null;
+                    $link = null;
+                    $item = $attachment->item();
+                    if ($item):
+                        $media = $attachment->media() ? : $item->primaryMedia();
+                        $mediaRenderer = $media->renderer();
+                        $mediaType = $media->mediaType();
+                    echo $media->render([
+                    'thumbnailType' => $thumbnailType,
+                    'link' => $link,
+                        ]);
 
-                    if ($showTitleOption == 'item_title'):
-                        $title = $item->displayTitle(null, $lang);
-                    elseif ($media && $showTitleOption == 'file_name'):
-                        $title = $media->displayTitle(null, $lang);
-                    endif;
+                        if ($showTitleOption == 'item_title'):
+                            $title = $item->displayTitle(null, $lang);
+                        elseif ($media && $showTitleOption == 'file_name'):
+                            $title = $media->displayTitle(null, $lang);
+                        endif;
 
-                    if ($title):
-                        if ($media && $linkType === 'media'):
-                            $link = $media->link($title);
-                        elseif ($media && $linkType === 'original' && $media->hasOriginal()):
-                            $link = $hyperlink($title, $media->originalUrl());
-                        else:
-                            $link = $item->link($title);
+                        if ($title):
+                            if ($media && $linkType === 'media'):
+                                $link = $media->link($title);
+                            elseif ($media && $linkType === 'original' && $media->hasOriginal()):
+                                $link = $hyperlink($title, $media->originalUrl());
+                            else:
+                                $link = $item->link($title);
+                            endif;
                         endif;
                     endif;
-                endif;
 
-                $caption = $attachment->caption();
-            ?>
-            <div class="item resource">
-                <?= $render ?>
-                <?php if ($attachment->caption()): ?>
-                <div class="caption">
-                    <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
+                    $caption = $attachment->caption();
+                ?>
+                <div class="item resource">
+                    <?= $render ?>
+                    <?php if ($attachment->caption()): ?>
+                    <div class="caption">
+                        <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
+                    </div>
+                    <?php endif; ?>
                 </div>
-                <?php endif; ?>
+                <?php endforeach; ?>
             </div>
-            <?php endforeach; ?>
         </div>
-    </div>
-    <div class="off-canvas-wrapper">
-        <div class="off-canvas-content" id="SeadragonOffCanvas" data-off-canvas-content>
-        <button type="button" class="button" data-toggle="SeadragonOffCanvas">View Text</button>
-            <div class="resource-text flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3 off-canvas-absolute position-left" data-off-canvas data-content-scroll="false">
-                <div class="metadata margin-bottom-1 separator-center">
-                    <?php $showTitleOption = $this->showTitleOption; ?>
-                    <?php if ($showTitleOption == 'item_title'): ?>
-                    <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
-                    <?php elseif ($showTitleOption == 'file_name'): ?>
-                    <h3 class="h2"><?php echo $item->link($media->displayTitle()); ?></h3>
+        <div class="off-canvas-wrapper">
+            <div class="off-canvas-content" id="SeadragonOffCanvas" data-off-canvas-content>
+                <button type="button" class="button" data-toggle="SeadragonOffCanvas">View Text</button>
+                <div class="resource-text flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3 off-canvas-absolute position-left" data-off-canvas data-content-scroll="false">
+                    <div class="metadata margin-bottom-1 separator-center">
+                        <?php $showTitleOption = $this->showTitleOption; ?>
+                        <?php if ($showTitleOption == 'item_title'): ?>
+                        <h3 class="h2"><?php echo $item->link($item->displayTitle()); ?></h3>
+                        <?php elseif ($showTitleOption == 'file_name'): ?>
+                        <h3 class="h2"><?php echo $item->link($media->displayTitle()); ?></h3>
+                        <?php endif; ?>
+                        <?php
+                        $date = $item->value('dcterms:date');
+                        if ($date):
+                        ?>
+                    <h3><small date><?php echo $date; ?></small></h3>
                     <?php endif; ?>
                     <?php
-                    $date = $item->value('dcterms:date');
-                    if ($date):
-                    ?>
-                <h3><small date><?php echo $date; ?></small></h3>
-                <?php endif; ?>
-                <?php
-                    $origin = $item->value('curation:location');
-                    if ($origin):
-                    ?>
-                <h3><small origin><?php echo $origin; ?></small></h3>
-                <?php endif; ?>
-                </div>
-                <div class="text font-wide">
-                    <?= $html ?>
-                    <?php
-                    $identifier = $item->value('dcterms:identifier');
-                    if ($identifier):
-                    ?>
-                    <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
+                        $origin = $item->value('curation:location');
+                        if ($origin):
+                        ?>
+                    <h3><small origin><?php echo $origin; ?></small></h3>
                     <?php endif; ?>
+                    </div>
+                    <div class="text font-wide">
+                        <?= $html ?>
+                        <?php
+                        $identifier = $item->value('dcterms:identifier');
+                        if ($identifier):
+                        ?>
+                        <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
+                        <?php endif; ?>
+                    </div>
                 </div>
             </div>
         </div>
