--- a/view/common/block-layout/asset-hero-full-page.phtml
+++ b/view/common/block-layout/asset-hero-full-page.phtml
@@ -33,7 +33,7 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 <?php $attachment = $attachments[array_rand($attachments)]; ?>
 <?php if (empty($attachment['asset'])) return; ?>
 
-<div class="full-width-css margin-bottom-1">
+<div class="full-width-css">
     <div class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if ($attachment['caption']) : ?>
             <div class="grid-container grid-x flex-grow align-middle">
