--- a/view/common/block-layout/html-introduction-lead.phtml
+++ b/view/common/block-layout/html-introduction-lead.phtml
@@ -9,7 +9,7 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css colour-scheme-2 padding-1 padding-vertical-2 medium-padding-2 large-padding-vertical-3 font-wide <?= $this->escapeHtmlAttr($divclass) ?>">
+<div class="lead full-width-css padding-1 padding-vertical-2 medium-padding-2 large-padding-vertical-3 font-wide <?= $this->escapeHtmlAttr($divclass) ?>">
     <div class="grid-x grid-container">
         <div class="page-header">
             <?php if (!empty($heading)): ?>
