--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -96,7 +96,7 @@ endif;
             <footer class="footerContainer">							
                 <div class="grid-x grid-padding-x grid-container padding-vertical-3">
                     
-                    <div class="medium-7 padding-left-1">
+                    <div class="cell small-6 medium-4 padding-left-1 padding-bottom-1">
                         <div class="footerLogos">
             
                             <img src="https://www.library.manchester.ac.uk/assets/images/design/national-research-libraries.png" height="63" alt="National Research Libraries">											
@@ -104,8 +104,11 @@ endif;
             
                         </div>
                     </div>
-                    
-                    <div class="medium-5 padding-left-1 medium-padding-right-1">
+                    <div class="cell small-6 medium-4 padding-left-1 medium-padding-right-1 padding-bottom-1">
+                        <h3>Send your feedback</h3>
+                        <p>In our efforts to improve this site, <a href="#">we welcome your thoughts, questions, and feedback.</a></p>
+                    </div>
+                    <div class="cell small-12 medium-4 padding-left-1 medium-padding-right-1">
                         <h3>Connect with us</h3>
                         <ul class="inlineList footer-socialIcons">
                             
