Added link to feedback form

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -107,8 +107,8 @@ endif;
                         </div>
                     </div>
                     <div class="cell small-6 medium-4 padding-left-1 medium-padding-right-1 padding-bottom-1">
-                        <h3>Send your feedback</h3>
-                        <p>In our efforts to improve this site, <a href="#">we welcome your thoughts, questions, and feedback.</a></p>
+                        <h3>Get in touch</h3>
+                        <p>In our efforts to improve this site, <a href="https://forms.library.manchester.ac.uk/public/form/649ac12b3917fcd3e2918ef4">we welcome your thoughts, questions, and feedback.</a></p>
                     </div>
                     <div class="cell small-12 medium-4 padding-left-1 medium-padding-right-1">
                         <h3>Connect with us</h3>
