--- a/view/common/block-layout/asset-hero-full-page.phtml
+++ b/view/common/block-layout/asset-hero-full-page.phtml
@@ -37,8 +37,8 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
     <div class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if ($attachment['caption']) : ?>
             <div class="grid-container grid-x flex-grow align-middle">
-                <div class="cell small-10 medium-8">
-                    <h2 class="text-center"><?= $attachment['caption'] ?></h2>
+                <div class="hero-title">
+                    <h2><?= $attachment['caption'] ?></h2>
                     <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
                     <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
                         <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
