Revised padding for Resource with Text
Updated Browse Preview Gallery block

--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -30,7 +30,7 @@
     $caption = $attachment->caption();
     if ($caption):
     ?>
-        <div class="caption"><?php echo $caption; ?></div>
+        <div class="caption padding-1 font-wide"><?php echo $caption; ?></div>
     <?php endif; ?>
     </div>
 <?php endforeach; ?>
