--- a/view/common/block-layout/resource-text-seadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-seadragon-dark.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css grid-x grid-padding-x padding-1 large-padding-2 margin-bottom-1 background-colour-uom-footer media-text">
+<div class="block media-text full-width-css grid-x grid-padding-x margin-bottom-1 background-colour-uom-footer">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading margin-bottom-1">
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
