--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
+<div class="block media-text full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
     <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
