--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container align-right large-padding-right-1 large-padding-right-0 large-padding-top-1">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container align-center large-padding-right-1 large-padding-right-0 large-padding-top-1">
         <div class="attachments">
         <?php
             foreach ($attachments as $attachment):
