Applied offset class to portrait Resource with Text

--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -27,8 +27,8 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container align-center large-padding-right-1 large-padding-right-0 large-padding-top-1">
-        <div class="attachments">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container large-padding-right-1 large-padding-right-0 large-padding-top-1">
+        <div class="attachments large-offset-2 xlarge-offset-3">
         <?php
             foreach ($attachments as $attachment):
                 $render = null;
