--- a/view/omeka/site/media/show.phtml
+++ b/view/omeka/site/media/show.phtml
@@ -10,11 +10,15 @@ $leftSidebarBlockContent = $this->resourcePageBlocks($media, 'left');
 $leftSidebarHasBlocks = $leftSidebarBlockContent->hasBlocks();
 $rightSidebarBlockContent = $this->resourcePageBlocks($media, 'right');
 $rightSidebarHasBlocks = $rightSidebarBlockContent->hasBlocks();
+
+$filterLocale = (bool) $this->siteSetting('filter_locale_values');
+$lang = $this->lang();
+$valueLang = $filterLocale ? [$lang, ''] : null;
 ?>
 <?php $this->htmlElement('body')->appendAttribute('class', 'media resource show'); ?>
 
 <div class="resource-title">
-<?php echo $this->pageTitle($media->displayTitle(), 2); ?>
+<?php echo $this->pageTitle($media->displayTitle(null, $valueLang), 2); ?>
 <h3 class="label"><?php echo $translate('Media'); ?></h3>
 </div>
 <?php $this->trigger('view.show.before'); ?>
