--- a/view/common/block-layout/asset-hero-large.phtml
+++ b/view/common/block-layout/asset-hero-large.phtml
@@ -33,13 +33,13 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 <?php $attachment = $attachments[array_rand($attachments)]; ?>
 <?php if (empty($attachment['asset'])) return; ?>
 
-<div class="full-width margin-bottom-1">
-    <div class="hero-image image-large <?= $escapeAttr($attachment['class']) ?>" style="background-image:url(<?= $attachment['asset']->assetUrl() ?>);">
+<div class="full-width-css">
+    <div class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if ($attachment['caption']) : ?>
-            <div class="grid-container grid-x">
-                <div class="cell small-10 medium-8">
-                    <h2 class="text-center"><?= $attachment['caption'] ?></h2>
-                    <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?> 
+            <div class="grid-container grid-x flex-grow align-middle">
+                <div class="hero-title">
+                    <h2><?= $attachment['caption'] ?></h2>
+                    <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
                     <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
                         <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
                     <?php endif; ?>
