--- a/view/common/block-layout/asset-hero-small.phtml
+++ b/view/common/block-layout/asset-hero-small.phtml
@@ -33,12 +33,12 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 <?php $attachment = $attachments[array_rand($attachments)]; ?>
 <?php if (empty($attachment['asset'])) return; ?>
 
-
-    <div class="hero-image image-large flex-container margin-bottom-1 <?= $escapeAttr($attachment['class']) ?>" style="background-image:url(<?= $attachment['asset']->assetUrl() ?>);">
+<div class="full-width-css">
+    <div class="hero-image image-small region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if ($attachment['caption']) : ?>
             <div class="grid-container grid-x flex-grow align-middle">
-                <div class="cell small-10 medium-8">
-                    <h2 class="text-center"><?= $attachment['caption'] ?></h2>
+                <div class="hero-title">
+                    <h2><?= $attachment['caption'] ?></h2>
                     <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
                     <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
                         <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
@@ -47,3 +47,4 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
             </div>
         <?php endif; ?>
     </div>
+</div>
