Updated openseadragon Item Showcase

--- a/view/common/block-layout/resource-text-image-cover-portrait.phtml
+++ b/view/common/block-layout/resource-text-image-cover-portrait.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text full-width-css grid-x grid-padding-x background-colour-uom-footer margin-bottom-1 flex-container image-cover">
+<div class="block media-text full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover">
     <?php if (!empty($heading)): ?>
     <div class="grid-container cell margin-bottom-1">
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
