--- a/view/common/block-layout/item-showcase-block-keep-ratio-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-keep-ratio-full-width.phtml
@@ -1,6 +1,6 @@
 <div class="full-width-css col-container full-item col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase-cover item resource text-center">
+        <div class="item-showcase-cover-full item resource text-center">
             <?php
             $item = $attachment->item();
             if ($item):
