--- a/view/common/block-layout/item-showcase-block-keep-ratio.phtml
+++ b/view/common/block-layout/item-showcase-block-keep-ratio.phtml
@@ -1,6 +1,6 @@
 <div class="col-container full-item col-media-container full-item medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase-cover item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
+        <div class="item-showcase-cover-full item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
             <?php
             $item = $attachment->item();
             if ($item):
