--- a/view/common/block-layout/item-showcase-multiples.phtml
+++ b/view/common/block-layout/item-showcase-multiples.phtml
@@ -1,8 +1,4 @@
-<?php
-    $itemCount = count($this->attachments);
-?>
-
-<div class="item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0 medium-padding-1 large-padding-2">
+<div class="item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0">
     <?php foreach ($attachments as $attachment): ?>
         <div class="card auto item resource flex-container flex-dir-column align-middle margin-1 medium-margin-bottom-2">
             <?php
